include/zyre_event.h

//  *** Draft method, for development use, may change without warning ***
//  Returns the group name that a SHOUT event was sent to
ZYRE_EXPORT const char *
    zyre_event_group (zyre_event_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Returns the incoming message payload
ZYRE_EXPORT zmsg_t *
    zyre_event_msg (zyre_event_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Print event to zsys log
ZYRE_EXPORT void
    zyre_event_print (zyre_event_t *self);
//  *** Draft method, for development use, may change without warning ***
//  Self test of this class.
ZYRE_EXPORT void
    zyre_event_test (bool verbose);