bindings/delphi/libzyre.pas


  // Returns the group name that a SHOUT event was sent to
  function zyre_event_group(self: PZyreEvent): PAnsiChar; cdecl; external lib_zyre;

  // Returns the incoming message payload; the caller can modify the
  // message but does not own it and should not destroy it.
  function zyre_event_msg(self: PZyreEvent): PZmsg; cdecl; external lib_zyre;

  // Returns the incoming message payload, and pass ownership to the
  // caller. The caller must destroy the message when finished with it.
  // After called on the given event, further calls will return NULL.
  function zyre_event_get_msg(self: PZyreEvent): PZmsg; cdecl; external lib_zyre;

  // Print event to zsys log
  procedure zyre_event_print(self: PZyreEvent); cdecl; external lib_zyre;

  // Self test of this class.
  procedure zyre_event_test(Verbose: Boolean); cdecl; external lib_zyre;
implementation
end.
